<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.gridgain.demo</groupId>
    <artifactId>ignite-streaming-monitoring-demo</artifactId>
    <version>1.0-SNAPSHOT</version>

    <repositories>
        <repository>
            <id>GridGain External Repository</id>
            <url>https://www.gridgainsystems.com/nexus/content/repositories/external</url>
        </repository>
    </repositories>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <ignite.version>2.9.0</ignite.version>
        <gridgain.version>8.8.34</gridgain.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <profiles>
        <profile>
            <id>community-edition</id>
            <activation>
                <activeByDefault>true</activeByDefault>
                <property>
                    <name>community</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.gridgain</groupId>
                    <artifactId>ignite-core</artifactId>
                    <version>${gridgain.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.gridgain</groupId>
                    <artifactId>ignite-indexing</artifactId>
                    <version>${gridgain.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.gridgain</groupId>
                    <artifactId>ignite-spring</artifactId>
                    <version>${gridgain.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.gridgain</groupId>
                    <artifactId>ignite-opencensus</artifactId>
                    <version>${gridgain.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>ultimate-edition</id>
            <activation>
                <property>
                    <name>ultimate</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.gridgain</groupId>
                    <artifactId>gridgain-ultimate</artifactId>
                    <version>${gridgain.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>apache-ignite</id>
            <activation>
                <property>
                    <name>ignite</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>org.apache.ignite</groupId>
                    <artifactId>ignite-core</artifactId>
                    <version>${ignite.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.ignite</groupId>
                    <artifactId>ignite-indexing</artifactId>
                    <version>${ignite.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.ignite</groupId>
                    <artifactId>ignite-spring</artifactId>
                    <version>${ignite.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.apache.ignite</groupId>
                    <artifactId>ignite-opencensus</artifactId>
                    <version>${ignite.version}</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.gridgain</groupId>
            <artifactId>control-center-agent</artifactId>
            <version>${gridgain.version}</version>
        </dependency>
        <dependency>
            <groupId>com.pubnub</groupId>
            <artifactId>pubnub-gson</artifactId>
            <version>4.23.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.9</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>ignite-streaming-app</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>org.gridgain.demo.StreamingApplication</mainClass>
                            <classpathPrefix>dependency-jars/</classpathPrefix>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.1</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/dependency-jars/</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
